@@ -88,18 +88,18 @@ gui:
         name: '&8> &6Your Limitations'
         lore:
           - ' '
-          - '&8- &7Create&3 {ownlands} &7lands.'
-          - '  &7lands.ownlands.NUMBER'
-          - '&8- &7Claim&3 {chunks} &7chunks per land.'
-          - '  &7lands.chunks.NUMBER'
-          - '&8- &7Support lands, in which you''re trusted,'
+          - '&7+ Create&3 {ownlands} &7lands.'
+          - '  &8lands.ownlands.NUMBER'
+          - '&7+ Claim&3 {chunks} &7chunks per land.'
+          - '  &8lands.chunks.NUMBER'
+          - '&7+ Support lands, in which you''re trusted,'
           - '  &7with &3{support-chunks} &7chunks per land.'
-          - '  &7lands.chunks.support.NUMBER'
+          - '  &8lands.chunks.support.NUMBER'
           - ' '
-          - '&8- &7Join&3 {lands} &7lands.'
-          - '  &7lands.lands.NUMBER'
-          - '&8- &7Have&3 {members} &7members per land.'
-          - '  &7lands.members.NUMBER'
+          - '&7+ Join&3 {lands} &7lands.'
+          - '  &8lands.lands.NUMBER'
+          - '&7+ Have&3 {members} &7members per land.'
+          - '  &8lands.members.NUMBER'
         material: PLAYER_HEAD
         slot: 17
 
@@ -1007,6 +1007,12 @@ gui:
           - ' '
           - '&7Allow this role to'
           - '&7attack players?'
+          - ' '
+          - '&8- Please note that due combat'
+          - '  &7logging it might still be possible'
+          - '  &7to fight inside your land,'
+          - '  &7if a player attacked a other player'
+          - '  &7outside the land.'
           - ' '
           - '&8- &7They can only attack'
           - '  &7players which can'
